Anonymous | Login | 2021-01-16 09:13 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0023638 | Community | [OCCT] OCCT:Data Exchange | public | 2012-12-13 11:25 | 2017-07-28 10:20 | ||||||||
Reporter | szv | ||||||||||||
Assigned To | gka | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 6.5.4 | ||||||||||||
Target Version | Fixed in Version | ||||||||||||
Summary | 0023638: Reading IGES file produced invalid shape | ||||||||||||
Description | This problem is reported by ChengShengXiong (via Contact Form). The enclosed IGES file, when read in DRAW with default parameters, produces invalid shape. Setting read.surfacecurve.mode to -3 allows to lower tolerance, however do not remove invalidity. | ||||||||||||
Steps To Reproduce | pload MODELING DATAEXCHANGE # the following command is used in this case because it allows to lower the tolerance after import param read.surfacecurve.mode -3 igesread d:/cadbad.igs a * | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | bugs iges bug23638 | ||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|
(0068647) git (administrator) 2017-07-24 18:50 |
Branch CR23638 has been created by mkv. SHA-1: f939c7fa1ab7539835db389e2e7f5023e6a8a981 Detailed log of new commits: Author: mkv Date: Mon Jul 24 18:50:27 2017 +0300 Test for 0023638: Reading IGES file produced invalid shape |
(0068812) mkv (tester) 2017-07-27 18:15 |
Dear BugMaster, problem described in issue is reproduced on current state of OCCT. |
(0068826) git (administrator) 2017-07-28 10:20 |
Branch CR23638 has been updated by apv. SHA-1: 0b31c7e9a1dfc0085b876c1d90dc593d685dd9db Detailed log of new commits: Author: apv Date: Fri Jul 28 10:19:54 2017 +0300 Test case adjustment |
![]() |
|||
Date Modified | Username | Field | Change |
2012-12-13 11:25 | szv | New Issue | |
2012-12-13 11:25 | szv | Assigned To | => gka |
2012-12-17 17:14 | szv | File Added: cadbad.zip | |
2017-07-24 18:50 | git | Note Added: 0068647 | |
2017-07-24 18:53 | mkv | Test case number | => bugs iges bug23638 |
2017-07-27 18:15 | mkv | Note Added: 0068812 | |
2017-07-28 10:20 | git | Note Added: 0068826 |
Copyright © 2000 - 2021 MantisBT Team |